<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Menu">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/poker_chips" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="3">

        <Button
            android:id="@+id/name_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/player_name_btn"
            android:textSize="@dimen/button_text_size_large" />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_weight="1"
            android:text="@string/play_btn"
            android:textSize="@dimen/button_text_size_large" />

        <Button
            android:id="@+id/view_hands_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_weight="1"
            android:text="@string/view_hands_btn"
            android:textSize="@dimen/button_text_size_large" />
    </LinearLayout>

</RelativeLayout>