<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_size"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="16"
    tools:context=".Game">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/hands_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/hands_played"
            android:textSize="24dp"
            android:textColor="@color/blue_grey"/>

        <TextView
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/bank"
            android:textSize="24dp"
            android:textColor="@color/blue_grey"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/handName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/player_hand"
        android:textSize="@dimen/button_text_size_large"
        android:gravity="center"
        android:textColor="@color/blue_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:weightSum="5">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hold_btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hold_card"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>

        <Button
            android:id="@+id/hold_btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hold_card"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>

        <Button
            android:id="@+id/hold_btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hold_card"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>


        <Button
            android:id="@+id/hold_btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hold_card"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>

        <Button
            android:id="@+id/hold_btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hold_card"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menu_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/menu_btn"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>


        <Button
            android:id="@+id/deal_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/deal_btn"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>

        <Button
            android:id="@+id/wins_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/wins_btn"
            android:layout_margin="2dp"
            android:textSize="@dimen/button_text_size_large"/>

    </LinearLayout>

</LinearLayout>